--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Number Guessing Game</title>
+  <title>Number Guessing Game, Andrea's Assignment 1</title>
 
   <style>
     html {
@@ -21,7 +21,7 @@
 <body>
 <h1>Guessing Game</h1>
 
-<p>A number between 0 -99 has been generated.
+<p>A number between 0 - 99 has been generated.
   Start guessing...</p>
 
 <div class="form">
@@ -37,7 +37,7 @@
   var number = Math.floor(Math.random() * 99 + 1);
 
   // guess count
-  var guessCount = 1;
+  var guessCount = 0;
 
 
   document.getElementById("submitguess").onclick = function()
@@ -49,6 +49,10 @@
     if(isNaN(guess))
     {
       alert("Please enter a valid number.");
+    }
+    else if ( guess >99 || guess <=  -1)
+    {
+      alert("Outside of bounds. Please guess between 0-99.")
     }
 
     else if (guess == number)
@@ -66,6 +70,7 @@
       guessCount+=1;
       alert("Incorrect, try a bigger number...")
     }
+
 
   }
 </script>
