--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Number Guessing Game, Andrea's Assignment 1</title>
 
   <style>
+    /* Basic CSS for game*/
     html {
       font-family: "Apercu",-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
     }
@@ -19,6 +20,7 @@
 </head>
 
 <body>
+
 <h1>Guessing Game</h1>
 
 <p>A number between 0 - 99 has been generated.
@@ -59,6 +61,7 @@
     {
       alert("Congratulations, you guessed the number "
         + number + " in " + guessCount + " guesses.");
+      location.reload();
     }
     else if (guess > number)
     {
